# xdaemon

./: example.py  pyproject.toml
src/xdaemon/: __init__.py
